--- a/index.html
+++ b/index.html
@@ -1,92 +1,92 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Tea Cozy</title>
-	<link rel="stylesheet" type="text/css" href="resources/css/style.css">
-</head>
-<body>
-  
-  <header class="flex-container">
-    <img src="resources/images/tea-cozy-logo.png">
-      <nav>
-       <span>
-         <span>  <a href="#mission"> Mission</a> </span>
-         <span>  <a href="#store"> Featured Tea</a> </span>
-         <span>  <a href="#locations"> Locations</a> </span>
-       </span>
-     </nav>
-  </header>
-
-  <div class="main">
-    <div id="mission">
-    	<h2>Our Mission</h2>
-    	<h4>Handpicked, Artisanally, Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organtic Tea</h4>
-    </div>
-  <div/>  
-
-  <div id="store">
-  	<h2>Tea of the Month</h2>
-  	<h4>Whats Steeping at The Tea Cozy?</h4>
-  	  <div class="flex-container items">
-  	    <div class="item">
-  	      <img src="resources/images/berry-blitz.jpeg">
-  	      <h3>Fall Berry Blitz Tea</h3>
+  <head>
+    <meta charset="utf-8">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <title>Tea Cozy</title>
+  </head>
+  <body>
+    <header>
+        <div class="logo-header">
+          <img id="logo" src="./resources/images/tea-cozy-logo.png" />
         </div>
-        <div class="item">
-  	      <img src="resources/images/spiced-rum.jpeg">
-  	      <h3>Spiced Rum Tea</h3>
-  	    </div>
-  	    <div class="item">
-  	      <img src="resources/images/donuts.jpeg">
-  	      <h3>Seasonal Donuts</h3>
-  	    </div>
-  	    <div class="item">
-  	      <img src="resources/images/myrtle-ave.jpeg">
-  	      <h3> Myrtle Ave Tea</h3>
-  	    </div>
-  	    <div class="item">
-  	      <img src="resources/images/bedford.jpeg">
-  	      <h3>Bedford Bizarre Tea</h3>
-  	    </div>
-  </div>
 
-  
-  <div id="locations">
-    <h2>Locations</h2>
-    <div class="flex-container locations">
-      <div class="location">
-  	    <h3>Downtown</h3>
-  	    <p>384 West 4th St</p>
-  	    <p>Suite 108</p>
-  	    <p>Portland, Maine</p>
-  	  </div>  
-      <div class="location">
-  	    <h3>East Bayside</h3>
-  	    <p>3433 Phisherman's Avenue</p>
-  	    <p>(Northwest Corner)</p> 
-  	    <p>Portland, Maine</p>
-  	  </div> 
-  	  <div class="location"> 
-  	    <h3>Oakdale</h3>
-  	    <p>515 Crescent Avenue</p>
-  	    <p>Second Floor</p>
-  	    <p>Portland, Maine</p>
-  	  </div>  
-  	</div>>      
-  </div>
+        <nav>
+          <ul>
+            <li><a href="#mission">Mission</a></li>
+            <li><a href="#tea">Featured Tea</a></li>
+            <li><a href="#locations">Locations</a></li>
+          </ul>
+        </nav>
+    </header>
 
-    <div id="contact">
-  	  <h2>The Tea Cozy</h2>
-  	  <h5>contact@theteacozy.com</h5>
-  	  <h5>917-555-8904</h5>
+    <div class ="content">
+      <div id="mission">
+        <div class="our-mission">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable,
+            Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+      </div>
+
+      <div id="tea">
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
+        <ul class="img-gallery">
+          <li class="block">
+            <img class="image" src="./resources/images/berry-blitz.jpeg" />
+            <h4>Fall Berry Blitz Tea</h4>
+          </li>
+          <li class="block">
+            <img class="image" src="./resources/images/spiced-rum.jpeg" />
+            <h4>Spiced Rum Tea</h4>
+          </li>
+          <li class="block">
+            <img class="image" src="./resources/images/donuts.jpeg" />
+            <h4>Seasonal Donuts</h4>
+          </li>
+          <li class="block">
+            <img class="image" src="./resources/images/myrtle-ave.jpeg" />
+            <h4>Myrtle Ave Tea</h4>
+          </li>
+          <li class="block">
+            <img class="image" src="./resources/images/bedford.jpeg" />
+            <h4>Bedford Bizarre Tea</h4>
+          </li>
+        </ul>
+      </div>
+
+      <div id="locations">
+        <h2 id="locations_title">Locations</h2>
+        <div class="location">
+          <h3>Downtown</h3>
+          <h4>384 West 4th St</h4>
+          <h4>Suite 108</h4>
+          <h4>Portland, Maine</h4>
+        </div>
+        <div class="location">
+          <h3>East Bayside</h3>
+          <h4>3433 Phisherman's Avenue</h4>
+          <h4>(Northwest Corner)</h4>
+          <h4>Portland, Maine</h4>
+        </div>
+        <div class="location">
+          <h3>Oakdale</h3>
+          <h4>515 Crescent Avenue</h4>
+          <h4>Second Floor</h4>
+          <h4>Portland, Maine</h4>
+        </div>
+      </div>
+
+      <div class="contacts">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+      </div>
     </div>
 
-    <div>
-      <footer>
-  	    <h4>copyright The Tea Cozy 2017</h4>
-      </footer>
-    </div>
-  </div>
-  
-</body>
+    <footer>
+      <h5 class="copyright">copyright The Tea Cozy 2017</h5>
+    </footer>
+  </body>
 </html>
